# arithcode

./: CMakeLists.txt
app/: main.cc
src/: ac.c  ac.h  std_arithcode.h
